--- a/retype.yml
+++ b/retype.yml
@@ -1,6 +1,6 @@
 input: .
 output: .retype
-url: # Add your website address here
+url: crabbrawl.github.io/CrabBrawl/
 branding:
   title: Crab Brawl
   label: Docs  
